--- a/barberapp/pubspec.yaml
+++ b/barberapp/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cloud_firestore: ^6.0.1
   cupertino_icons: ^1.0.8
   http: ^1.5.0
+  dio: ^5.9.0
+  http_parser: ^4.0.0
   flutter_stripe: ^12.0.2
   url_launcher: ^6.3.2
   bkash: ^0.0.2
@@ -26,6 +28,7 @@ dependencies:
   uddoktapay: ^0.0.6
   get: ^4.7.2
   provider: ^6.0.5
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
